# rust-solo-all-db

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LATTER_PHASE.md  OVERVIEW.md  README.md  db.yaml  test_commands.txt
data/: README.md  sstable_000000.sst
data/examples/: example_output.sst  inspect_me.sst
docs/: README.md  TARGET_RESULT.md
examples/: macro_usage.rs
rust-solo-all-db-macros/: Cargo.toml
rust-solo-all-db-macros/src/: lib.rs
src/: args.rs  cli.rs  config.rs  lib.rs  main.rs  metrics.rs
src/cli_data/: sstable_000000.sst
src/engine/: bloom.rs  compaction.rs  level.rs  leveled_compaction.rs  lsm.rs  mod.rs  sstable.rs  wal.rs
src/etl/: csv_parser.rs  loader.rs  mod.rs
src/macros/: derive_query.rs  lib.rs  query_dsl.rs
src/query/: ast.rs  executor.rs  mod.rs  parser.rs
test_script/: README.md
test_script/cli/: advanced_etl_test.txt  basic_load_test.txt  comprehensive_test.txt  enhanced_test.txt  no_headers_test.txt  products_test.txt  recovery_test.txt  semicolon_test.txt  simple_insert_test.txt  simple_test.txt  tab_test.txt  test_commands.txt
test_script/csv/: no_headers.csv  pipe_with_errors.csv  products.csv  tab_delimited.tsv  test_data.csv  test_semicolon.csv  test_with_errors.csv
tests/: common.rs  end_to_end.rs  performance.rs  stress_tests.rs
