[package]
name = "rust-solo-all-db"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
bit-vec = "0.6"
fnv = "1.0"
csv = "1.3"
rayon = "1.8"
serde_json = "1.0.140"
rust-solo-all-db-macros = { path = "rust-solo-all-db-macros" }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "rustdb"
path = "src/main.rs"

